Now lets the user enter a description for the city and displays it on the individual place page

--- a/Views/place.cshtml
+++ b/Views/place.cshtml
@@ -1,4 +1,5 @@
 <h1>@Model.GetCityName()</h1>
+<h2>@Model.GetCityDescription()</h2>
 
 <a href="/places/new">Add another city</a>
 <a href="/places">View all cities</a>
