--- a/Views/place_form.cshtml
+++ b/Views/place_form.cshtml
@@ -3,5 +3,7 @@
 <form action="/places" method="post">
   <label for="new-place-name">City Name:</label>
   <input id="new-place-name" name="new-place-name" type="text">
+  <label for="new-place-description">City Description:</label>
+  <input id="new-place-description" name="new-place-description" type="text">
   <button type="submit">Add City</button>
 </form>
